# blobscan

./: .dockerignore  .env  .env.development  .env.example  .env.test  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .prettierrc.json  Dockerfile  Dockerfile.docs  FUNDING.json  LICENSE  Makefile  README.md  build.sh  database.sh  docker-compose.api.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  dump.rdb  funding.json  kill.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyrightconfig.json  renovate.json  sentry.ts  show_latest_log.sh  start.sh  tsconfig.json  turbo.json  types.ts  vitest.config.ts  (+2 more)
.changeset/: add-announcement-banner.md  add-trusted-proxies-turbo-env.md  afraid-beers-protect.md  afraid-cheetahs-sleep.md  afraid-pandas-flash.md  afraid-readers-argue.md  afraid-tools-cough.md  angry-peas-sing.md  angry-planes-join.md  beige-chefs-check.md  beige-houses-sniff.md  beige-lions-jump.md  beige-suits-melt.md  big-bags-warn.md  big-mice-swim.md  big-walls-brush.md  big-wolves-hide.md  blue-cobras-thank.md  blue-dryers-work.md  blue-geese-teach.md  blue-paws-think.md  brave-pants-divide.md  breezy-cups-double.md  breezy-keys-appear.md  breezy-sheep-hide.md  bright-news-hide.md  bright-waves-explode.md  brin-inserted-at-indexes.md  brown-emus-hunt.md  brown-fans-join.md  brown-roses-trade.md  calm-buses-walk.md  calm-experts-draw.md  calm-rats-swim.md  calm-spies-fix.md  calm-teachers-watch.md  chatty-files-agree.md  chatty-pears-drum.md  chatty-sloths-confess.md  chatty-worms-watch.md  (+490 more)
.github/: issue_template.md  pull_request_template.md
apps/analytics/: Dockerfile  Dockerfile.dagster  Dockerfile.usercode  README.md  db-seed.ts  package.json  pyproject.toml  workspace.yaml
apps/analytics/src/analytics/defs/: asset_factories.py  assets.py  helpers.py  hourly_metrics.py  jobs.py  sensors.py  sources.py
apps/analytics/src/analytics/defs/sql/: aggregate.sql  aggregate_all_time.sql  aggregate_blob_hourly.sql  aggregate_tx_hourly.sql
apps/analytics/src/analytics/resources/: postgres.py
apps/analytics/tests/: conftest.py  db-fixtures.json  test_asset_factories.py  test_assets.py  test_helpers.py  test_schedules.py  test_sensors.py
apps/dagster/: Dockerfile  Dockerfile.dagster  Dockerfile.usercode  README.md  dagster.yaml  package.json  pyproject.toml  ruff.toml  workspace.yaml
apps/dagster/.dg/: telemetry.yaml
apps/dagster/scripts/: generate_models.py
apps/dagster/src/analytics/defs/: asset_factories.py  assets.py  helpers.py  jobs.py  schedules.py  sensors.py
apps/dagster/src/analytics/defs/resources/: postgres.py
apps/dagster/src/analytics/defs/sql/: aggregate.sql  aggregate_all_time.sql  aggregate_blob_hourly.sql  aggregate_tx_hourly.sql
apps/dagster/tests/: conftest.py  db-fixtures.json  test_assets.py  test_helpers.py  test_schedules.py  test_sensors.py
components/: BlobscanLogo.tsx  BlockCard.tsx  DarkModeButton.tsx  DonateButton.tsx  Footer.tsx  Header.tsx  InputSearch.tsx  Link.tsx  Switcher.tsx  heading.js  layout.js  linkLayout.js  search.js
docker-entrypoint-initdb.d/: init-db.sql
lib/: prisma.ts
misc/: sftp-init.sh
pages/: 404.tsx  _app.tsx  _document.tsx  empty.tsx  index.tsx
prisma/: schema.prisma
providers/: Chakra.tsx  Superfluid.tsx  Wagmi.tsx
scripts/: backfill-all-daily-stats.ts  backfill-all-overall-stats.ts  backfill-daily-block-stats.ts  backfill-overall-blob-stats.ts  backfill-overall-block-stats.ts  backfill-overall-tx-stats.ts  delete-all-daily-stats.ts  delete-all-overall-stats.ts  init-bucket.ts  populate-daily-stats.ts  populate-overall-stats.ts  run-integration.sh  setenv.sh  update-daily-stats.ts  update-overall-stats.ts  upsert-daily-stats.ts  (+1 more)
(+940 files in other folders)
