[project]
name = "blobscan-dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.14",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "analytics"
registry_modules = [
    "analytics.components.*",
]


