[project]
name = "blobscan-dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster (>=1.12.19,<2.0.0)",
    "dagster-docker (>=0.28.19,<0.29.0)",
    "dagster-postgres",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "dagster-k8s (>=0.28.19,<0.29.0)",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "mypy>=1.19.1",
    "pytest>=8.0",
    "ruff>=0.15.6",
    "testcontainers[postgres]>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: mark test as requiring a live PostgreSQL container (Docker must be running)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "analytics"
registry_modules = [
    "analytics.components.*",
]


